웹프로그래밍 실습 3번째 실습 이미지넣기, 테이블만들기, list 만들기

--- a/silsup2/tamplate.html
+++ b/silsup2/tamplate.html
@@ -2,6 +2,17 @@
 <html lang="kr">
   <head>
   <title> 이것은 큰 제목이다</title>
+  <style>
+  table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+  th, td {
+    padding: 15px;
+    text-align: center;
+  }
+
+  </style>
   </head>
   <body>
     <h2>작은 제목 1</h2>
@@ -21,10 +32,78 @@
     <a href="https://www.inflearn.com/" target="_blank"> 이건 인프런 사이트이다. 여기도 수업에 쓰인다. 이건 a 태그로 써봤다.</a><br>
   <br>
   <br>
+  <h1> 파이썬언어 아이콘</h1>
+  <img src="images/opengraph-icon-200x200.png" width="200" height="200" alt="python_icon">
+  <p> 파이썬은 뱀이라 이런 아이콘을 쓴다.</p>
+<h1> 이번학기 시간표</h1>
+  <table>
+    <caption> &lt;2019년 1학기 이상건 시간표 &gt; </caption>
+<thead>
+  <tr>
+  <th rowspan="2">교시</th> <th colspan="5"> 요일</th>
+</tr>
+<tr>
+  <td>월</td> <td>화</td> <td>수</td> <td>목</td> <td>금</td>
+</thead>
+<tbody>
+  <tr>
+    <td> 1교시 </td> <td></td> <td></td><td></td><td></td><td></td>
+  </tr>
+  <tr>
+    <td> 2교시 </td> <td></td> <td rowspan="2">운영체제및실습</td> <td rowspan="2">임베디드소프트웨어</td> <td rowspan="2">자료구조</td> <td rowspan="2">웹프로그래밍</td>
+  </tr>
+  <tr>
+    <td> 3교시 </td> <td></td>
+  </tr>
+  <tr>
+    <td> 4교시 </td> <td>실전코딩</td> <td></td> <td></td> <td></td> <td></td>
+  </tr>
+  <tr>
+    <td> 5교시 </td> <td rowspan="2">운영체제및실습</td> <td></td> <td></td> <td rowspan="2">임베디드소프트웨어</td> <td rowspan="2">IT영어</td>
+  </tr>
+  <tr>
+    <td> 6교시 </td> <td rowspan="2">자료구조</td> <td></td>
+  </tr>
+  <tr>
+    <td> 7교시 </td> <td rowspan="3">실전코딩</td> <td></td> <td></td> <td></td>
+  </tr>
+  <tr>
+    <td> 8교시 </td> <td></td> <td></td> <td></td> <td></td>
+  </tr>
+  <tr>
+    <td> 9교시 </td> <td rowspan="2">웹프로그래밍</td> <td></td> <td></td> <td></td>
+  </tr>
+  <tr>
+    <td> 10교시 </td> <td rowspan="3">종합설계1</td> <td></td> <td></td> <td></td>
+  </tr>
+  <tr>
+    <td> 11교시 </td> <td></td> <td></td> <td></td> <td></td>
+  </tr>
+  <tr>
+    <td> 12교시 </td> <td></td> <td></td> <td></td> <td></td>
+  </tr>
+  <tr>
+    <td> 13교시 </td> <td></td> <td></td> <td></td> <td></td> <td></td>
+  </tr>
+
+</tbody>
+  </table>
+  <h1> 이번학기 할것들</h1>
+<ol>
+  <li> Toeic 시험 준비하기
+    <ul>
+      <li> 인강 선정하기 </li>
+      <li> 하루 3시간씩 문법 공부하기</li>
+    </ul>
+  </li>
+  <li> 웹 프로그래밍 공부하기 </li>
+</ol>
+
+<iframe src="http://www.alba.co.kr/" height="600" width="600"> </iframe>
   <address>
     <pre>
 Written by Gun
-  contact me with email:<a href="sglee487@gmail.com">sglee487@gamil.com</a>
+  contact me with email:<a href="sglee487@gmail.com">sglee487@gmail.com</a>
     Chungnam National University
       Korea
     </pre>
