javascript(BMI_calculator) practice

--- a/silsup2/tamplate.html
+++ b/silsup2/tamplate.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
+<head>
   <title> 이것은 큰 제목이다</title>
   <link rel="stylesheet" type="text/css" href="template.css">
     <meta charset="utf-8">
