--- a/HW1/calandar.html
+++ b/HW1/calandar.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
 <html lang="kr">
   <head>
-    <style>
-      <link rel="sty"
-    </style>
+    <link rel="stylesheet" type="text/css" href="calandar.css">
   </head>
   <body>
+  <table>
+    <thead>
+      <tr>
+      <th colspan="7" id="table_caption"></th>
+    </tr>
+    <tr>
+      <td id="Sunday">일</td> <td>월</td> <td>화</td> <td>수</td> <td>목</td> <td>금</td> <td id="Saturday">토</td>
+    </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+      </tr>
+    </tbody>
+  </table>
+  <script src="calandar.js">
+  </script>
   </body>
+</html>
