trying to table days function..

--- a/HW1/calandar.html
+++ b/HW1/calandar.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="calandar.css">
   </head>
   <body>
-  <table>
+  <table >
     <thead>
       <tr>
       <th colspan="7" id="table_caption"></th>
@@ -15,7 +15,7 @@
     </thead>
     <tbody>
       <tr>
-        <td id="cell_1"></td><td id="cell_2"></td><td id="cell_3"></td><td id="cell_4"></td><td id="cell_5"></td><td id="cell_6"></td><td id="cell_7">sdf</td>
+        <td id="cell_1">test</td><td id="cell_2"></td><td id="cell_3"></td><td id="cell_4"></td><td id="cell_5"></td><td id="cell_6"></td><td id="cell_7">sdf</td>
       </tr>
       <tr>
         <td id="cell_8"></td><td id="cell_9"></td><td id="cell_10"></td><td id="cell_11"></td><td id="cell_12"></td><td id="cell_13"></td><td id="cell_14"></td>
@@ -24,7 +24,7 @@
         <td id="cell_15"></td><td id="cell_16"></td><td id="cell_17"></td><td id="cell_18"></td><td id="cell_19"></td><td id="cell_20"></td><td id="cell_21"></td>
       </tr>
       <tr>
-        <td id="cell_22"></td><td id="cell_23"></td><td id="cell_24"></td><td id="cell_25"></td><td id="cell_26"></td><td id="cell_27"></td><td id="cell_28"></td>
+        <td id="cell_22">test</td><td id="cell_23"></td><td id="cell_24"></td><td id="cell_25"></td><td id="cell_26"></td><td id="cell_27"></td><td id="cell_28"></td>
       </tr>
       <tr>
         <td id="cell_29"></td><td id="cell_30"></td><td id="cell_31"></td><td id="cell_32"></td><td id="cell_33"></td><td id="cell_34"></td><td id="cell_35"></td>
