change function name days_input -> today_input

--- a/HW1/calandar.html
+++ b/HW1/calandar.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="calandar.css">
   </head>
   <body>
-  <table event=days_input()>
+  <table>
     <thead>
       <tr>
       <th colspan="7" id="table_caption"></th>
