기본 레이아웃 body 완성. 날짜 숫자 넣고 배경 칠함

--- a/HW1/calandar.html
+++ b/HW1/calandar.html
@@ -10,7 +10,7 @@
       <th colspan="7" id="table_caption"></th>
     </tr>
     <tr>
-      <td id="Sunday">일</td> <td>월</td> <td>화</td> <td>수</td> <td>목</td> <td>금</td> <td id="Saturday">토</td>
+      <td id="Sunday">일</td> <td id="Monday">월</td> <td id="Tuesday">화</td> <td id="Wednesday">수</td> <td id="Thursday">목</td> <td id="Friday">금</td> <td id="Saturday">토</td>
     </tr>
     </thead>
     <tbody>
