드디어 클릭하면 일정 추가 성공. div 도 id, form 도 id로 하니 안에서 문제가 생긴모양. div는 class로 form은 id로 처리함.

--- a/HW1/calandar.html
+++ b/HW1/calandar.html
@@ -33,15 +33,16 @@
         <td id="cell_35"></td><td id="cell_37"></td><td id="cell_38"></td><td id="cell_39"></td><td id="cell_40"></td><td id="cell_41"></td><td id="cell_42"></td>
       </tr>
 
-      <div id="add_schedule_window">
-         일 일정추가
-         <br>
-         <input type="text" name="일정" value="">
-         <br>
-         <button type="button" name="add">add</button>
-         <button type="button" name="Cancel" onclick="hide_add_schedule()">Cancel</button>
-       </div>
+      <div class="add_schedule_window">
+      <form id="form">
 
+         <input id="input_add" type="text" name="일정" value="">
+         <br>
+         <button type="button" name="add" onclick="input_add_OK()">add</button>
+         <button type="button" name="Cancel" onclick="input_add_Cancel()">Cancel</button>
+
+       </form>
+     </div>
     </tbody>
 
   </table>
