"% 일 일정추가" 뜨게하고, 기존 입력값 있던 버그 제거

--- a/HW1/calandar.html
+++ b/HW1/calandar.html
@@ -34,6 +34,8 @@
       </tr>
 
       <div class="add_schedule_window">
+        <p id="sth_day_input">
+      </p>
       <form id="form">
 
          <input id="input_add" type="text" name="일정" value="">
