나중에 edit 창에서 현재 날을 띄우기 위해 add window용 form 과 edit용 form 분리하려고 이름 따로 만듬.

--- a/HW1/calandar.html
+++ b/HW1/calandar.html
@@ -36,7 +36,7 @@
       <div class="add_schedule_window">
         <p id="sth_day_input">
       </p>
-      <form id="form">
+      <form id="form_add">
 
          <input id="input_add" type="text" name="일정" value="">
          <br>
@@ -47,13 +47,13 @@
      </div>
 
      <div class="edit_schedule_window">
-     <form id="form">
+     <form id="form_edit">
 
         일정 날짜 변경: <input id="input_edit_day" type="date" name="일정 날짜 변경" value="">
         <br>
         일정 순서 변경: <input id="input_sequence_day" type="number" name="일정 순서 변경" value="" min=1 max=4>
         <br>
-        <button type="button" name="Save" onclick="input_edit_day_Ok()">edit</button>
+        <button type="button" name="Save" onclick="input_edit_day_Edit()">edit</button>
         <button type="button" name="Delete" onclick="input_edit_Delete()">Delete</button>
 
       </form>
