x를 눌렀을때 x의 날짜순서, 입력의 날짜순서 둘다 저장하게 만듬.

--- a/HW1/calandar.html
+++ b/HW1/calandar.html
@@ -54,7 +54,7 @@
         일정 순서 변경: <input id="input_sequence_day" type="number" name="일정 순서 변경" value="" min=1 max=4>
         <br>
         <button type="button" name="Save" onclick="input_edit_day_Edit()">edit</button>
-        <button type="button" name="Delete" onclick="input_edit_Delete()">Delete</button>
+        <button type="button" name="Delete" onclick="input_edit_Delete(this.parentElement.children[0][0].value,this.parentElement.children[0][1].value)">Delete</button>
 
       </form>
     </div>
