--- a/HW1/calandar.html
+++ b/HW1/calandar.html
@@ -53,8 +53,8 @@
         <br>
         일정 순서 변경: <input id="input_sequence_day" type="number" name="일정 순서 변경" value="" min=1 max=4>
         <br>
-        <button type="button" name="Save" onclick="input_edit_day_Edit()">edit</button>
-        <button type="button" name="Delete" onclick="input_edit_Delete(this.parentElement.children[0][0].value,this.parentElement.children[0][1].value)">Delete</button>
+        <button type="button" name="Save" onclick="input_edit_day_Edit(this.parentElement.children[0][0].value,this.parentElement.children[0][1].value)">edit</button>
+        <button type="button" name="Delete" onclick="input_edit_Delete()">Delete</button>
 
       </form>
     </div>
