날짜 다르면 비활성화 완성

--- a/HW1/calandar.html
+++ b/HW1/calandar.html
@@ -49,11 +49,11 @@
      <div class="edit_schedule_window">
      <form id="form_edit">
 
-        일정 날짜 변경: <input id="input_edit_day" type="date" name="일정 날짜 변경" value="">
+        일정 날짜 변경: <input id="input_edit_day" type="date" name="일정 날짜 변경" value="" onchange="diffentday_disable(this.parentElement.children[0][0].value,this.parentElement.children[0][1].value)">
         <br>
         일정 순서 변경: <input id="input_sequence_day" type="number" name="일정 순서 변경" value="" min=1 max=4>
         <br>
-        <button type="button" name="Save" onclick="input_edit_day_Edit(this.parentElement.children[0][0].value,this.parentElement.children[0][1].value)">edit</button>
+        <button type="button" name="Save" onclick="input_edit_day_Edit(this.parentElement.children[0][0].value,this.parentElement.children[0][1].value)">Save</button>
         <button type="button" name="Delete" onclick="input_edit_Delete()">Delete</button>
 
       </form>
