--- a/HW1/tryjsref_text_disabled2.html
+++ b/HW1/tryjsref_text_disabled2.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-Name: <input type="date" id="myText" value="" onchange="same_disable()"">
+Name: <input type="date" id="myText" value="" onchange="same_disable()">
 <br>
 Name2: <input type="text" id="myText2" value="" >
 <p>Click the button to disable the text field.</p>
