단어 한자로 수정

--- a/HW1/calandar.html
+++ b/HW1/calandar.html
@@ -10,7 +10,7 @@
       <th colspan="7" id="table_caption"></th>
     </tr>
     <tr>
-      <td id="Sunday">일</td> <td id="Monday">월</td> <td id="Tuesday">화</td> <td id="Wednesday">수</td> <td id="Thursday">목</td> <td id="Friday">금</td> <td id="Saturday">토</td>
+      <td id="Sunday">日</td> <td id="Monday">月</td> <td id="Tuesday">火</td> <td id="Wednesday">水</td> <td id="Thursday">木</td> <td id="Friday">金</td> <td id="Saturday">土</td>
     </tr>
     </thead>
     <tbody>
