vaildator에서 조금씩 고치는 중.. utf-8이랑 title, head태그 위치 수정

--- a/HW1/calandar.html
+++ b/HW1/calandar.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="kr">
   <head>
+    <title>Calandar</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="calandar.css">
   </head>
   <body>
