--- a/silsup0524/php_Q.html
+++ b/silsup0524/php_Q.html
@@ -1,7 +1,8 @@
 <!DOCTYPE>
 <html>
 	<head>
-		<title> 2019 웹 프로그래밍 중간고사 : 2번 </title>
+        <title> 2019 웹 프로그래밍 중간고사 : 2번 </title>
+        <meta charset="utf-8">
 	</head>
 	<body>
 
