입력 이름 수정

--- a/HW2/hw2.html
+++ b/HW2/hw2.html
@@ -7,8 +7,8 @@
 	<body>
 
         <form name="frame_form" method="POST" action="Submit.php">
-		화일 이름 : <input type="text" name="name"><br><br>
-		단어 : <input type="text" name="word"><br><br>
+		아이디 <input type="text" name="UserId"><br><br>
+		패스워드 <input type="text" name="UserPassword"><br><br>
         <input type="submit" value="제출"> 
         <input type="submit" value="초기화" onclick="reset()"> 
         <input type="submit" value="회원가입" formaction="SignUp.php">
