--- a/HW2/hw2.html
+++ b/HW2/hw2.html
@@ -6,10 +6,10 @@
 	</head>
 	<body>
 
-        <form name="frame_form" method="POST" action="Submit.php">
-		아이디 <input type="text" name="UserId"><br><br>
-		패스워드 <input type="text" name="UserPassword"><br><br>
-        <input type="submit" value="제출"> 
+        <form name="frame_form" method="POST">
+		아이디 <input type="text" id="UserId"><br><br>
+		패스워드 <input type="text" id="UserPassword"><br><br>
+        <input type="submit" value="제출" formaction="Submit.php"> 
         <input type="submit" value="초기화" onclick="reset()"> 
         <input type="submit" value="회원가입" formaction="SignUp.php">
         <br><br>
