jQuery와 php 다 사용할수 있도로 id name 다 부여

--- a/HW2/hw2.html
+++ b/HW2/hw2.html
@@ -7,8 +7,8 @@
 	<body>
 
         <form name="frame_form" method="POST">
-		아이디 <input type="text" id="UserId"><br><br>
-		패스워드 <input type="text" id="UserPassword"><br><br>
+		아이디 <input type="text" id="UserId" name="UserId"><br><br>
+		패스워드 <input type="text" id="UserPassword" name="UserPassword"><br><br>
         <input type="submit" value="제출" formaction="Submit.php"> 
         <input type="submit" value="초기화" onclick="reset()"> 
         <input type="submit" value="회원가입" formaction="SignUp.php">
