실습 박스 구상 및 샘플데이터

--- a/silsup0531/silsup0531.html
+++ b/silsup0531/silsup0531.html
@@ -3,9 +3,22 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script src="silsup0531.js"></script>
+<link rel="stylesheet" type="text/css" href="silsup0531.css">
 </head>
 <body>
+<div> 이미지 파일 선택 </div> <input type="file" > <br>
+<input type="button" value="이미지 추가">
+<br>
+<br>
 
+<div id="box1">
 
+</div>
+
+<div id="box2">
+    
+</div>
+
+<style ></style>
 </body>
 </html>
