html 기초는 갖춘듯.

--- a/silsup0531/silsup0531.html
+++ b/silsup0531/silsup0531.html
@@ -6,10 +6,14 @@
 <link rel="stylesheet" type="text/css" href="silsup0531.css">
 </head>
 <body>
-<div> 이미지 파일 선택 </div> <input type="file" > <br>
-<input type="button" value="이미지 추가">
+<div> 이미지 파일 선택 </div> <input type="file" multiple> <br>
+<input type="button" value="이미지 추가" onclick="showImage()">
 <br>
 <br>
+
+<div id="pic_upload">
+
+</div>
 
 <div id="box1">
 
