--- a/silsup0531/silsup0531.html
+++ b/silsup0531/silsup0531.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="silsup0531.css">
 </head>
 <body>
-<div> 이미지 파일 선택 </div> <input type="file" multiple> <br>
+<div> 이미지 파일 선택 </div> <input type="file" id="myFile" multiple> <br>
 <input type="button" value="이미지 추가" onclick="showImage()">
 <br>
 <br>
