바구니 갯수 넣을 수 있도록 span 추가

--- a/silsup0531/silsup0531.html
+++ b/silsup0531/silsup0531.html
@@ -15,10 +15,12 @@
 
 </div>
 
+<span>A 바구니 : </span><span id="box1_number"></span>
 <div id="box1" ondrop="drop(event)" ondragover="allowDrop(event)">
 
 </div>
 
+<span>B 바구니 : </span><span id="box2_number"></span>
 <div id="box2" ondrop="drop(event)" ondragover="allowDrop(event)">
     
 </div>
