카드 사이 간격

--- a/TermProject_solitaire/solitaire.html
+++ b/TermProject_solitaire/solitaire.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="maintainBoard">
-            <table>
+            <table id="table1">
                     <!-- 카드보드 위에 부분. -->
                 <thead> 
                     <tr>
