한글 깨지는거 고침

--- a/silsup0531/silsup0531.html
+++ b/silsup0531/silsup0531.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script src="silsup0531.js"></script>
 <link rel="stylesheet" type="text/css" href="silsup0531.css">
