validate 사이트에서 수정

--- a/HW2/hw2.html
+++ b/HW2/hw2.html
@@ -1,5 +1,5 @@
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
+<html lang="ko">
 	<head>
         <title> 2019 웹프로그래밍 HW2 </title>
         <meta charset="utf-8">
