--- a/TermTest2/quiestion3/3_main.html
+++ b/TermTest2/quiestion3/3_main.html
@@ -15,8 +15,12 @@
     </form>
 
 <p>Start typing the title of a article in the input field below: </p>
-Keyword: <input type="text" name="" id="Keyword">
+Keyword: <input type="text" name="" id="Keyword" onkeyup="showHint(this.value)">
 <p>Recommended article title: </p>
+<ul id="unorderlist">
+
+
+</ul>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="3_main.js">
   </script>
